--- a/layouts/mediaqueries.css
+++ b/layouts/mediaqueries.css
@@ -1,16 +1,23 @@
 @media screen and (max-width: 560px) {
   .nav-container {
     position: fixed;
-    width: 30%;
+    /* width: 30%; */
     background: rgba(255, 255, 255, 0.592);
     border-radius: 20px;
   }
-  nav ul li:nth-child(2),
+  nav ul {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+  }
   nav ul li:nth-child(3),
   nav ul li:nth-child(4),
-  nav ul li:nth-child(5),
   nav ul li:nth-child(6),
-  nav ul li:nth-child(7) {
+  nav ul li:nth-child(7),
+  nav ul li:nth-child(8) {
     display: none;
+  }
+  .landing-container img {
+    width: 100%;
   }
 }
