--- a/layouts/settings.css
+++ b/layouts/settings.css
@@ -51,6 +51,13 @@ button {
 button a {
   color: white;
 }
+button:hover {
+  background: white;
+  border: 2px solid black;
+}
+button:hover a {
+  color: black;
+}
 p {
   font-size: 0.7rem;
   font-weight: bold;
